Add fonttools dependency to support custom font feature
Signed-off-by: Jacob Stopak <jacob@initialcommit.io>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "opencv-python-headless",
     "pydantic_settings",
     "typer",
+    "fonttools",
 ]
 dynamic = ["version"]
 
