Correct license specified in pyproject.toml from MIT to GNU GPLv2
Signed-off-by: Jacob Stopak <jacob@initialcommit.io>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,10 @@ keywords = [
     "dryrun",
     "dry-run",
 ]
-license = { text = "MIT License" }
+license = { text = "GPL-2.0" }
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
     "Operating System :: OS Independent",
 ]
 dependencies = [
